--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,14 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "prisma:seed": "tsx prisma/seed.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
+    "test:cov": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
     "test:load": "./tests/load/run-load-tests.sh all",
     "test:load:concurrent": "./tests/load/run-load-tests.sh concurrent",
     "test:load:throughput": "./tests/load/run-load-tests.sh throughput",
-    "test:load:quick": "./tests/load/run-load-tests.sh quick"
+    "test:load:quick": "./tests/load/run-load-tests.sh quick",
+    "lint": "eslint src/"
   },
   "keywords": [
     "social-network",
@@ -31,6 +32,8 @@
     "@aws-sdk/client-s3": "^3.943.0",
     "@aws-sdk/lib-storage": "^3.943.0",
     "@prisma/client": "^5.22.0",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
     "cookie-parser": "^1.4.7",
@@ -48,16 +51,17 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pino": "^10.3.1",
+    "pino-pretty": "^13.1.3",
     "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "sharp": "^0.33.5",
-    "@socket.io/redis-adapter": "^8.3.0",
-    "@tensorflow/tfjs-node": "^4.22.0",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
@@ -73,11 +77,14 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
+    "eslint": "^10.0.0",
+    "globals": "^17.3.0",
     "jest": "^29.7.0",
     "prisma": "^5.22.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.55.0"
   }
 }
